--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 .background-photo {
-  height: 100vh;
+  height: 100%;
   width: 40vw;
+
 
 }
 @font-face {
     font-family: "Norse Bold";
     src: url(Norse-Bold.otf);
+}
+
+.logo-text {
+    font-family: "Norse Bold";
 }
 
 /* .logo-text {
@@ -35,13 +40,17 @@
     opacity: 0.6;
     position: absolute;
     top: 20%;
-    left: 8%;
+    left: 12%;
+    width: min(170px,30%);
+    
+    
     
 }
 
 
 .container {
     display: flex;
+    
 }
 
 .first-last,.email-phone,.passwords,.create {
@@ -55,7 +64,72 @@
     gap: 20px;
 }
 
-.quote,.create {
-    height: 35vh;
-    background-color: aliceblue;
+.quote {
+   
+    background-color: rgb(247, 247, 247);
+
 }
+
+.quote {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding: 40px;
+    padding-top: 100px;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+}
+.first,.last,.email,.phone,.password,.confirm {
+    display: flex;
+    flex-direction: column;
+}
+
+.form {
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.first-last,.email-phone,.passwords {
+    gap: 50px;
+}
+label {
+    font-weight: bold;
+    font-size: 12px;
+    opacity: 0.9;
+}
+
+input {
+    border-radius: 5px;
+    width: 15vw;
+    /* color: #E5E7EB; */
+}
+
+.create {
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+    border-top: 1px solid #bbb;
+    padding: 40px;
+    padding-top: 20px;
+    height: 20vh;
+    font-size: smaller;
+
+}
+
+.fields {
+    padding: 40px;
+    padding-top: 0px;
+    margin-bottom: 40px;
+    height: 30vh;
+}
+
+button {
+    background-color: #596D48;
+    color: white;
+    width: 26vh;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+
